# tantivy

./: .gitignore  Cargo.toml  README.md  extract-types.cjs  generated.d.ts  package-lock.json  package.json
crates/tantivy-node/: Cargo.toml
crates/tantivy-node/src/: boxarc.rs  boxcell.rs  boxmutex.rs  lib.rs  num.rs
examples/: fur.js  utils.js
examples/jane-austen/: README.md  index.js  lady-susan.json  northanger-abbey.json  pack.js  package-lock.json  package.json  test.js
examples/jane-austen/client/: index.html  package-lock.json  package.json
examples/jane-austen/data/: emma.json  lady-susan.json  mansfield-park.json  northanger-abbey.json  persuasion.json  pride-and-prejudice.json  sense-and-sensibility.json
examples/jane-austen/lady-susan/: chapter-04.txt  chapter-07.txt  chapter-09.txt  chapter-11.txt  chapter-12.txt  chapter-26.txt  chapter-28.txt  chapter-30.txt  chapter-32.txt  chapter-38.txt  chapter-41.txt  meta.json
examples/jane-austen/mansfield-park/: chapter-03.txt  chapter-08.txt  chapter-14.txt  chapter-17.txt  chapter-22.txt  chapter-34.txt  chapter-36.txt  chapter-38.txt  chapter-41.txt  chapter-45.txt  chapter-47.txt
examples/jane-austen/northanger-abbey/: chapter-09.txt  chapter-14.txt  chapter-19.txt  chapter-21.txt  meta.json  note.txt
examples/jane-austen/persuasion/: chapter-03.txt  chapter-08.txt  chapter-17.txt  chapter-21.txt
examples/jane-austen/server/: package-lock.json  (+2 more)
examples/simple/: package-lock.json  package.json  simple.js
examples/utils/: package.json  utils.js
src/: generated.d.cts  index.cts  load.cts
(+317 files in other folders)
