[package]
name = "tantivy-node"
version = "0.1.0"
description = "In-process Node.js bindings for Tantivy"
authors = ["David Herman <david.herman@gmail.com>"]
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = { git = "https://github.com/neon-bindings/neon", features = ["serde"] }
ordermap = { version = "0.5.4", features = ["serde"] }
serde = "1.0.215"
tantivy = "0.22.0"
tantivy-fst = "0.5.0"
